--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dcousens/react-interval.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dcousens/react-interval/issues"
+  },
+  "homepage": "https://github.com/dcousens/react-interval",
   "keywords": [
     "react",
     "interval",
