--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-interval",
+  "name": "react-timers",
   "version": "1.1.0",
   "description": "A react setInterval mixin for mere mortals.",
   "main": "index.js",
@@ -8,12 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dcousens/react-interval.git"
+    "url": "https://github.com/dcousens/react-timers.git"
   },
   "bugs": {
-    "url": "https://github.com/dcousens/react-interval/issues"
+    "url": "https://github.com/dcousens/react-timers/issues"
   },
-  "homepage": "https://github.com/dcousens/react-interval",
+  "homepage": "https://github.com/dcousens/react-timers",
   "keywords": [
     "react",
     "interval",
