--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "4.0.0",
   "description": "A react setInterval/setTimeout/setImmediate mixin for mere mortals.",
   "main": "lib/index.js",
+  "files": [
+    "lib/"
+  ],
   "scripts": {
     "build": "babel --out-dir lib/ src/",
     "build-examples": "find examples/src -name '*.js' -exec sh -c 'browserify -t babelify {} --outfile examples/`basename {}`' \\;",
