--- a/package.json
+++ b/package.json
@@ -2,33 +2,15 @@
   "name": "react-timers",
   "version": "5.0.0",
   "description": "A react setInterval/setTimeout mixin for mere mortals.",
-  "main": "lib/index.js",
-  "files": [
-    "lib/"
-  ],
+  "main": "index.js",
   "scripts": {
-    "build": "babel --out-dir lib/ src/",
-    "build-examples": "find examples/src -name '*.js' -exec sh -c 'browserify -t babelify {} --outfile examples/`basename {}`' \\;",
-    "prepublish": "npm run build",
     "standard": "standard",
-    "start": "npm run watch-examples",
-    "test": "npm run standard",
-    "watch": "babel --watch --out-dir lib/ src/",
-    "watch-examples": "find examples/src -name '*.js' -exec sh -c 'watchify -v -t babelify {} --outfile examples/`basename {}`' \\;"
-  },
-  "standard": {
-    "ignore": [
-      "lib/"
-    ]
+    "test": "npm run standard"
   },
   "dependencies": {},
   "devDependencies": {
-    "babel": "*",
-    "babelify": "*",
-    "browserify": "*",
-    "react": "^0.13.3",
-    "standard": "*",
-    "watchify": "*"
+    "react": "^0.15.5",
+    "standard": "*"
   },
   "repository": {
     "type": "git",
